include/output/openswmm_output.h

/*! 
* \typedef SMO_Handle 
* \brief Opaque pointer to struct. Do not access variables. 
*/
typedef void *SMO_Handle;
/*!
* \brief Retrieves link attribute values for a given time period and attribute type
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] linkIndex The index of the link
* \param[in] attr The link attribute type to retrieve
* \param[in] startPeriod The starting time period to retrieve data from
* \param[in] endPeriod The ending time period to retrieve data from
* \param[out] outValueArray Pointer to the link attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getLinkSeries(
    SMO_Handle p_handle, 
    int linkIndex, 
    SMO_linkAttribute attr, 
    int startPeriod, 
    int endPeriod, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves system attribute values for a given time period and attribute type
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] attr The system attribute type to retrieve
* \param[in] startPeriod The starting time period to retrieve data from 
* \param[in] endPeriod The ending time period to retrieve data from
* \param[out] outValueArray Pointer to the system attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getSystemSeries(
    SMO_Handle p_handle, 
    SMO_systemAttribute attr, 
    int startPeriod, 
    int endPeriod, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves subcatchment attribute values for a given time period and attribute type
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] attr The subcatchment attribute type to retrieve
* \param[out] outValueArray Pointer to the subcatchment attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getSubcatchAttribute(
    SMO_Handle p_handle, 
    int timeIndex, 
    SMO_subcatchAttribute attr, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves node attribute values for a given time period and attribute type
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] attr The node attribute type to retrieve
* \param[out] outValueArray Pointer to the node attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getNodeAttribute(
    SMO_Handle p_handle, 
    int timeIndex, 
    SMO_nodeAttribute attr, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves link attribute values for a given time period and attribute type 
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] attr The link attribute type to retrieve
* \param[out] outValueArray Pointer to the link attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getLinkAttribute(
    SMO_Handle p_handle, 
    int timeIndex, 
    SMO_linkAttribute attr, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves system attribute values for a given time period and attribute type
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] attr The system attribute type to retrieve
* \param[out] outValueArray Pointer to the system attribute values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getSystemAttribute(
    SMO_Handle p_handle, 
    int timeIndex, 
    SMO_systemAttribute attr, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves subcatchment result values for a given time period
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] subcatchIndex The index of the subcatchment
* \param[out] outValueArray Pointer to the subcatchment result values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getSubcatchResult(
    SMO_Handle p_handle,
    int timeIndex, 
    int subcatchIndex,
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves node result values for a given time period
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] nodeIndex The index of the node
* \param[out] outValueArray Pointer to the node result values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getNodeResult(
    SMO_Handle p_handle, 
    int timeIndex, 
    int nodeIndex, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves link result values for a given time period
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] linkIndex The index of the link
* \param[out] outValueArray Pointer to the link result values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getLinkResult(
    SMO_Handle p_handle, 
    int timeIndex, 
    int linkIndex, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Retrieves system result values for a given time period
* \param[in] p_handle Opaque pointer to SWMM output file handle
* \param[in] timeIndex The index of the time period
* \param[in] dummyIndex The index of the system
* \param[out] outValueArray Pointer to the system result values
* \param[out] length Pointer to the length of the outValueArray array
* \return Error code 0 on success, -1 on failure or error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_getSystemResult(
    SMO_Handle p_handle, 
    int timeIndex, 
    int dummyIndex, 
    float **outValueArray, 
    int *length
);
/*!
* \brief Frees memory allocated by the API for the outValueArray
* \param[in] array Pointer to the outValueArray
*/
void EXPORT_SWMM_OUTPUT_API SMO_free(void **array);
/*!
* \brief Clears the error status of the SMO_Handle
* \param[in] p_handle Opaque pointer to SWMM output file handle
*/
void EXPORT_SWMM_OUTPUT_API SMO_clearError(SMO_Handle p_handle_in);
/*!
* \brief Checks for error in the error handle and copies the error message to the
* message buffer 
* \param[in] p_handle Pointer to opaque SMO_Handle
* \param[out] msg_buffer Error message buffer 
* \return Error code
*/
int EXPORT_SWMM_OUTPUT_API SMO_checkError(SMO_Handle p_handle_in, char **msg_buffer);