python/openswmm/output/output.pxd


    # Retrieves link attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # linkIndex: The index of the link
    # attr: The link attribute type to retrieve
    # startPeriod: The starting time period to retrieve data from
    # endPeriod: The ending time period to retrieve data from
    # outValueArray: Pointer to the link attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getLinkSeries(SMO_Handle p_handle, int linkIndex, SMO_linkAttribute attr, int startPeriod, int endPeriod, float **outValueArray, int *length)

    # Retrieves system attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # attr: The system attribute type to retrieve
    # startPeriod: The starting time period to retrieve data from
    # endPeriod: The ending time period to retrieve data from
    # outValueArray: Pointer to the system attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getSystemSeries(SMO_Handle p_handle, SMO_systemAttribute attr, int startPeriod, int endPeriod, float **outValueArray, int *length)

    # Retrieves subcatchment attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # attr: The subcatchment attribute type to retrieve
    # outValueArray: Pointer to the subcatchment attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getSubcatchAttribute(SMO_Handle p_handle, int timeIndex, SMO_subcatchAttribute attr, float **outValueArray, int *length)

    # Retrieves node attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # attr: The node attribute type to retrieve
    # outValueArray: Pointer to the node attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getNodeAttribute(SMO_Handle p_handle, int timeIndex, SMO_nodeAttribute attr, float **outValueArray, int *length)

    # Retrieves link attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # attr: The link attribute type to retrieve
    # outValueArray: Pointer to the link attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getLinkAttribute(SMO_Handle p_handle, int timeIndex, SMO_linkAttribute attr, float **outValueArray, int *length)

    # Retrieves system attribute values for a given time period and attribute type
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # attr: The system attribute type to retrieve
    # outValueArray: Pointer to the system attribute values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getSystemAttribute(SMO_Handle p_handle, int timeIndex, SMO_systemAttribute attr, float **outValueArray, int *length)

    # Retrieves subcatchment result values for a given time period
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # subcatchIndex: The index of the subcatchment
    # outValueArray: Pointer to the subcatchment result values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getSubcatchResult(SMO_Handle p_handle, int timeIndex, int subcatchIndex, float **outValueArray, int *length)

    # Retrieves node result values for a given time period
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # nodeIndex: The index of the node
    # outValueArray: Pointer to the node result values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getNodeResult(SMO_Handle p_handle, int timeIndex, int nodeIndex, float **outValueArray, int *length)

    # Retrieves link result values for a given time period
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # linkIndex: The index of the link
    # outValueArray: Pointer to the link result values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getLinkResult(SMO_Handle p_handle, int timeIndex, int linkIndex, float **outValueArray, int *length)

    # Retrieves system result values for a given time period
    # p_handle: Pointer to a SMO_Handle
    # timeIndex: The index of the time period
    # dummyIndex: The index of the system
    # outValueArray: Pointer to the system result values
    # length: Pointer to the length of the outValueArray array
    # Returns: Error code
    int SMO_getSystemResult(SMO_Handle p_handle, int timeIndex, int dummyIndex, float **outValueArray, int *length)

    # Frees memory allocated by the API for the outValueArray
    # array: Pointer to the outValueArray
    void SMO_free(void **array)

    # Clears the error status of the SMO_Handle
    # p_handle: Pointer to a SMO_Handle
    void SMO_clearError(SMO_Handle p_handle)

    # Retrieves the error message from the SMO_Handle
    # p_handle: Pointer to a SMO_Handle
    # msg_buffer: Pointer to the error message
    # Returns: Error code
    int SMO_checkError(SMO_Handle p_handle, char **msg_buffer)